cleaned up notebooks

--- a/Eval EfficientNet with TinyImageNet.ipynb
+++ b/Eval EfficientNet with TinyImageNet.ipynb
@@ -27,14 +27,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision import models\n",
+    "\n",
+    "import torchvision\n",
     "\n",
     "\n",
-    "weights = models.EfficientNet_V2_S_Weights.IMAGENET1K_V1\n",
-    "base_model = models.efficientnet_v2_s(weights=weights)\n",
+    "weights = torchvision.models.EfficientNet_V2_S_Weights.IMAGENET1K_V1\n",
+    "base_model = torchvision.models.efficientnet_v2_s(weights=weights)\n",
     "\n",
     "model = torch.nn.Sequential(\n",
-    "    weights.transforms(),\n",
+    "    torchvision.transforms.Normalize(TinyImageNet.mean,TinyImageNet.std),\n",
     "    base_model\n",
     "\n",
     ")"
