--- a/Finetune EfficientNet with TinyImageNet.ipynb
+++ b/Finetune EfficientNet with TinyImageNet.ipynb
@@ -1145,12 +1145,18 @@
     "\n",
     "weights = models.EfficientNet_V2_S_Weights.IMAGENET1K_V1\n",
     "base_model = models.efficientnet_v2_s(weights=weights)\n",
+    "# freeze base model\n",
+    "for param in base_model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# add new classification head\n",
     "tinyimagenet_classes = 200\n",
     "base_model.classifier = torch.nn.Sequential(\n",
     "    torch.nn.Dropout(p=0.2,inplace=True),\n",
     "    torch.nn.Linear(1280, tinyimagenet_classes),\n",
     ")\n",
     "\n",
+    "# add normalization transforms\n",
     "model = torch.nn.Sequential(\n",
     "    weights.transforms(),\n",
     "    base_model,\n",
@@ -1201,14 +1207,14 @@
     "import poutyne\n",
     "\n",
     "\n",
-    "device = torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\")\n",
     "def get_dataset(split): return TinyImageNet(Path(\"~/.torchvision/tinyimagenet/\"),split=split,imagenet_idx=False)\n",
     "\n",
     "train_dataset = get_dataset(\"train\")\n",
     "val_dataset = get_dataset(\"val\")\n",
     "\n",
     "\n",
-    "poutyne_model = poutyne.Model(\n",
+    "trainer = poutyne.Model(\n",
     "        model,\n",
     "        'adam',\n",
     "        'cross_entropy',\n",
@@ -1218,7 +1224,7 @@
     ")\n",
     "\n",
     "\n",
-    "poutyne_model.fit_dataset(train_dataset,valid_dataset=val_dataset,batch_size=32,epochs=5)"
+    "trainer.fit_dataset(train_dataset,valid_dataset=val_dataset,batch_size=32,epochs=5)"
    ]
   },
   {
