--- a/Train basic CNN with TinyImageNet.ipynb
+++ b/Train basic CNN with TinyImageNet.ipynb
@@ -259,7 +259,9 @@
     "    block(2*f,4*f), #8x8\n",
     "    block(4*f,8*f), #4x4\n",
     ")\n",
-    "linear_size=2*2*8*f\n",
+    "pixels = (64*64) / (2 * (2**5))\n",
+    "linear_size= pixels*8*f\n",
+    "\n",
     "model = torch.nn.Sequential(\n",
     "    torchvision.transforms.Normalize(TinyImageNet.mean,TinyImageNet.std),\n",
     "    conv,\n",
@@ -305,7 +307,7 @@
     "import poutyne\n",
     "\n",
     "\n",
-    "device = torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\")\n",
     "def get_dataset(split): return TinyImageNet(Path(\"~/.torchvision/tinyimagenet/\"),split=split,imagenet_idx=False)\n",
     "\n",
     "train_dataset = get_dataset(\"train\")\n",
